# Clear_Template_Tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
src/App/entry/: Wrapper.tsx  main.tsx
src/App/styles/: index.css  tailwind.css
src/App/translations/: en.json  i18n.js  i18n.ts  ru.json
src/App/updater/: Updater.tsx  update-version.js
src/Pages/App/: App.tsx
