[package]
name = "cleartemplatetauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = [ "window-set-size", "window-minimize", "window-maximize", "window-unmaximize", "window-start-dragging", "process-relaunch", "window-show", "window-set-focus", "dialog-message", "notification-all", "updater", "fs-read-dir", "fs-create-dir", "fs-write-file", "path-all", "window-set-decorations", "os-all", "window-set-fullscreen", "window-close", "window-unminimize", "icon-ico", "shell-open"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-shadows = {git = "https://github.com/tauri-apps/window-shadows", branch = "dev" }
tokio = { version = "1.36.0", features = ["time"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# use this to override sub-dependencies
# [patch.crates-io]
# tao = { git = "https://github.com/tauri-apps/tao", branch = "dev" }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
# strip = true  # Automatically strip symbols from the binary.
